# Infector

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  meson.build  meson_options.txt  uk.co.mangobrain.Infector.json
data/: Makefile.am  about.glade  infector.desktop.in  infector.desktop.in.in  infector.glade  infector.ui  menu.ui  meson.build  newgame.glade
po/: POTFILES.in  cs.po  meson.build
src/: Makefile.am  ai.cxx  ai.hxx  boardstate.cxx  boardstate.hxx  clientinfo.hxx  clientsocket.cxx  clientsocket.hxx  clientstatusdialog.cxx  clientstatusdialog.hxx  game.cxx  game.hxx  gameboard.cxx  gameboard.hxx  gametype.hxx  gamewindow.hxx  infector-i18n.hxx  infector.cxx  meson.build  newgamedialog.cxx  newgamedialog.hxx  serverstatusdialog.cxx  serverstatusdialog.hxx  socket.cxx  socket.hxx
